Updated elgohr/Publish-Docker-Github-Action to a supported version (v5)

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -12,7 +12,7 @@ jobs:
       id: get_version
       run: echo "RELEASE_VERSION=$(cat ./VERSION)" >> $GITHUB_ENV
     - name: Publish to Registry
-      uses: elgohr/Publish-Docker-Github-Action@master
+      uses: elgohr/Publish-Docker-Github-Action@v5
       with:
         name: emcniece/dockeryourxyzzy
         username: ${{ secrets.DOCKER_USERNAME }}
